Fix menu collapse on mobile device.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2467,12 +2467,12 @@ a.search-result {
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .site-meta {
-    box-shadow: 0 0 16px rgba(0,0,0,0.5);
+    /* box-shadow: 0 0 16px rgba(0,0,0,0.5); */
   }
 }
 @media (max-width: 767px) {
   .site-meta {
-    box-shadow: 0 0 16px rgba(0,0,0,0.5);
+    /* box-shadow: 0 0 16px rgba(0,0,0,0.5); */
   }
 }
 .brand {
